Bug 259093 - [regression] Search dialog missing folder selection
Summary: [regression] Search dialog missing folder selection
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 285105 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-07 11:52 UTC by Thiago Macieira
Modified: 2012-02-29 08:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Screenshot showing the issue (51.95 KB, image/png)
2010-12-07 11:53 UTC, Thiago Macieira
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2010-12-07 11:52:35 UTC
Version:           2.0.89 (using Devel) 
OS:                Linux

There's something wrong with the layout of the Search dialog. There's too much space between the items. See screenshot

Reproducible: Always




OS: Linux (i686) release 2.6.35.2-server-1mnb
Compiler: gcc
Comment 1 Thiago Macieira 2010-12-07 11:53:04 UTC
Created attachment 54236 [details]
Screenshot showing the issue
Comment 2 Thiago Macieira 2010-12-07 11:56:52 UTC
Now I see what's missing in that dialog that stands out to the eye:

The folder selection widget is missing.
Comment 3 Thiago Macieira 2010-12-07 12:03:16 UTC
May be related to bug 259098.
Comment 4 Allen Winter 2011-04-11 16:18:36 UTC
adding this regression to showstoppers (probably will be fixed with bug 259098)
Comment 5 Sergio Martins 2011-04-15 17:10:53 UTC
The item spacing is fixed.

Laurent disabled the "folder selection" feature because we don't have code right now to make to tell nepomuk on which collection to search.
Comment 6 Dennis Schridde 2011-09-24 15:24:27 UTC
Confirming for 4.7.1
Comment 7 Christophe Marin 2012-01-07 01:03:07 UTC
*** Bug 285105 has been marked as a duplicate of this bug. ***
Comment 8 Laurent Montel 2012-02-29 08:41:23 UTC
Git commit 6c548e5194ecfee38c4e3ed852cfd68b8b620d9d by Montel Laurent.
Committed on 29/02/2012 at 09:39.
Pushed by mlaurent into branch 'master'.

Fix: Bug 259093 - [regression] Search dialog missing folder selection

Readd search in specific folder

FIXED-IN: 4.8.1

M  +12   -17   kmail/searchwindow.cpp
M  +12   -2    mailcommon/searchpattern.cpp
M  +2    -1    mailcommon/searchpattern.h

http://commits.kde.org/kdepim/6c548e5194ecfee38c4e3ed852cfd68b8b620d9d
Comment 9 Laurent Montel 2012-02-29 08:44:33 UTC
Git commit 1bcf4fdf18f1b98c4dc0fe7f9641ed234dac9737 by Montel Laurent.
Committed on 29/02/2012 at 09:39.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix: Bug 259093 - [regression] Search dialog missing folder selection

Readd search in specific folder

FIXED-IN: 4.8.1
(cherry picked from commit 6c548e5194ecfee38c4e3ed852cfd68b8b620d9d)

Conflicts:

	mailcommon/searchpattern.cpp
	mailcommon/searchpattern.h

M  +12   -17   kmail/searchwindow.cpp
M  +12   -2    mailcommon/searchpattern.cpp
M  +166  -115  mailcommon/searchpattern.h

http://commits.kde.org/kdepim/1bcf4fdf18f1b98c4dc0fe7f9641ed234dac9737