Fix: Bug 259093 - [regression] Search dialog missing folder selection

Readd search in specific folder

FIXED-IN: 4.8.1
BUG: 259093
(cherry picked from commit 6c548e5194ecfee38c4e3ed852cfd68b8b620d9d)

Conflicts:

	mailcommon/searchpattern.cpp
	mailcommon/searchpattern.h